run/error.log
main.cpp: In function ‘int main()’:
main.cpp:19:1: error: ‘ut’ was not declared in this scope
 ut<<"ehl"<<endl;
 ^
